--- a/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
@@ -60,6 +60,11 @@
         </ul>
     </section>
 
+    <section>
+        <h3>Javascripts and Stylesheets</h3>
+        <a href="{{ path('cms_core.asset_readAll', {'siteId':site.id}) }}">View All Assets</a>
+    </section>
+
     <nav>
         <ul>
             <li><a href="{{ path('cms_core.app_index') }}">Back to Admin</a></li>
