added media storage layer with s3

--- a/src/Cms/CoreBundle/Resources/views/Media/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/edit.html.twig
@@ -3,10 +3,11 @@
 {% block body %}
     <h1>Edit Media {{ media.filename }}</h1>
     {% block notices %}{{ parent() }}{% endblock %}
+    <img src="{{ media.url }}" alt="" {{ media.metadata.dimensions | raw }} />
     <form action="{{ path('cms_core.media_update') }}" method="post">
         <input type="hidden" name="token" value="{{ token }}"/>
         <input type="hidden" name="id" value="{{ media.id }}"/>
-        <input type="text" name="filename" value="{{ media.filename }}"/>
+        <input type="text" name="filename" value="{{ media.filename }}" required/>
         <input type="submit" value="save"/>
     </form>
     <nav>
