--- a/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Media/new.html.twig
@@ -6,6 +6,7 @@
     <form action="{{ path('cms_core.media_create') }}" method="post" enctype="multipart/form-data">
         <input type="hidden" name="token" value="{{ token }}"/>
         <input type="hidden" name="siteId" value="{{ site.id }}"/>
+        <input type="hidden" name="MAX_FILE_SIZE" value="10737418240" />
         <input type="file" name="media" size="60"/>
         <input type="submit" value="Add Media"/>
     </form>
