--- a/src/Cms/CoreBundle/Resources/public/css/welcome/index.css
+++ b/src/Cms/CoreBundle/Resources/public/css/welcome/index.css
@@ -9,9 +9,15 @@ body {
     background-color: #ECF0F1;
 }
 #primary-content {
-    padding-top: 20px;
+    padding-top: 30px;
     background-color: #2C3E50;
     color: white;
+}
+#primary-content h1 {
+    text-align: center;
+}
+#primary-cta {
+    margin-top: 20px;
 }
 h1 {
     font-size: 60px;
@@ -24,22 +30,90 @@ h2.tile-title {
     padding-top: 30px;
     padding-bottom: 5px;
     color: #34495E;
+    background-color: #BDC3C7;
 }
 #features .tile:hover {
     cursor: pointer;
-    background-color: #BDC3C7;
+    background-color: white;
+}
+.icon-bolt-hover {
+    color: #F1C40F;
+}
+.icon-cloud-hover {
+    color: #3498DB;
+}
+.icon-globe-hover {
+    color: #16A085;
+}
+.icon-magic-hover {
+    color: #8E44AD;
+}
+.icon-cog-hover {
+    color: #2ECC71;
+}
+.icon-heart-hover {
+    color: #C0392B;
+}
+#testimonials {
+    padding-top: 20px;
+    padding-bottom: 100px;
+    background-color: #2c3e50;
+    color: white;
+}
+#testimonials h2 {
+    text-align: center;
+    padding-bottom: 30px;
+    border-bottom: solid 2px #ffffff;
+    margin-bottom: -30px;
+    font-size: 26px;
+}
+.quote-block {
+    margin-top: 60px;
+}
+blockquote {
+    margin: 14px 0px;
+    margin-bottom: 20px;
+}
+.img-circle {
+    border: 5px solid white;
 }
 #signup-blocks {
     padding-top: 20px;
-    background-color: #34495E;
-    color: white;
+    background-color: white;
+    background-color: #BDC3C7;
+}
+.tile {
+    background-color: #edeff1;
+    padding-bottom: 38px;
+}
+.tile h3, .tile h2 {
+    font-size: 32px;
+    padding: 20px;
+}
+.tile p {
+    font-size: 18px;
+}
+.tile-signup .btn {
+    width: 70%;
 }
 #footer {
     padding-top: 20px;
-    background-color: #edeff1
+    background-color: #BDC3C7;
 }
 #footer ul, #footer li {
     list-style: none;
     display: inline-block;
     padding: 3px 10px 0px;
+    font-size: 16px;
+}
+#footer a {
+    color: #2980B9;
+}
+.btn-xlarge {
+    padding: 16px 24px;
+    font-size: 22px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 7px;
 }
